--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-Flask==3.0.2
-twilio==9.0.3
-openai==1.30.1
-python-dotenv==1.0.1
+Flask>=2.0,<3.0
+openai>=1.17.0,<2.0.0
+twilio>=7.0,<9.0
+gunicorn>=20.0,<22.0
+# Add any other direct dependencies your project might have
