--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,5 @@ Flask>=2.0,<3.0
 openai>=1.17.0,<2.0.0
 twilio>=7.0,<9.0
 gunicorn>=20.0,<22.0
+requests>=2.20,<3.0
 # Add any other direct dependencies your project might have
